spade-tests/src/snapshots/spade_tests__parser__missing_expression.snap
---
source: spade-tests/src/parser.rs
assertion_line: 173
---
entity a() -> int<32> {
    if 0 else {4};
}

error: Unexpected `else`, expected expression
  ┌─ testinput:2:10
  │
2 │     if 0 else {4};
  │          ^^^^ expected expression here


